--- a/components/loci-plugins/build.properties
+++ b/components/loci-plugins/build.properties
@@ -12,6 +12,7 @@ component.version        = 4.4-DEV
 component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/ome-xml.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/ij.jar:\
                            ${lib.dir}/junit-4.8.2.jar:\
