--- a/components/common/pom.xml
+++ b/components/common/pom.xml
@@ -34,12 +34,14 @@
     </dependency>
 
     <dependency>
+      <!-- NB: We want this, despite warning from dependency:analyze. -->
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.14</version>
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <!-- NB: We want this, despite warning from dependency:analyze. -->
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.5.10</version>
