Updated ome-io ant dependencies
Added ome-xml as an explicit dependency of the ant ome-io targets, and
ensured ome-xml.jar is on the ome-io classpath.

--- a/components/ome-io/build.properties
+++ b/components/ome-io/build.properties
@@ -9,8 +9,9 @@
 component.name           = ome-io
 component.jar            = ome-io.jar
 component.version        = 4.4-DEV
-component.classpath      = ${artifact.dir}/scifio.jar:\
-                           ${artifact.dir}/loci-common.jar:\
+component.classpath      = ${artifact.dir}/loci-common.jar:\
+                           ${artifact.dir}/ome-xml.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/ome-java.jar:\
                            ${lib.dir}/omero_client.jar:\
