Tweak copyright holders blocks
We now use an indented list, prefixed by "Open Microscopy Environment"
to make clear that we are all part of the OME consortium.

This commit also adds Glencoe Software to the list of copyright holders
for ome-xml.

--- a/components/ome-xml/pom.xml
+++ b/components/ome-xml/pom.xml
@@ -80,11 +80,12 @@
         <artifactId>license-maven-plugin</artifactId>
         <configuration>
           <licenseName>ome-xml</licenseName>
-          <organizationName>Open Microscopy Environment
-    Massachusetts Institute of Technology,
-    National Institutes of Health,
-    University of Dundee,
-    and Board of Regents of the University of Wisconsin-Madison.</organizationName>
+          <organizationName>Open Microscopy Environment:
+  - Massachusetts Institute of Technology
+  - National Institutes of Health
+  - University of Dundee
+  - Board of Regents of the University of Wisconsin-Madison
+  - Glencoe Software, Inc.</organizationName>
           <projectName>OME-XML Java library for working with OME-XML metadata structures.</projectName>
         </configuration>
       </plugin>
