Update license headers for moved files

--- a/components/scifio-devel/src/ome/scifio/services/services.properties
+++ b/components/scifio-devel/src/ome/scifio/services/services.properties
@@ -1,8 +1,8 @@
 ###
 # #%L
-# LOCI Common package: utilities for I/O, reflection and miscellaneous tasks.
+# OME SCIFIO package for reading and converting scientific file formats.
 # %%
-# Copyright (C) 2008 - 2012 Open Microscopy Environment:
+# Copyright (C) 2005 - 2012 Open Microscopy Environment:
 #   - Board of Regents of the University of Wisconsin-Madison
 #   - Glencoe Software, Inc.
 #   - University of Dundee
