--- a/components/ome-plugins/pom.xml
+++ b/components/ome-plugins/pom.xml
@@ -35,11 +35,6 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>loci-common</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
       <artifactId>loci_plugins</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -51,6 +46,11 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>ome-xml</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>scifio</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
