Added loci-legacy component
This is the second in 2 commits to preserve backwards compatibility
within the loci.common packages.

All loci.common classes within the loci-legacy component have
been converted to delegator classes, which pass functionality to the
maintained ome.scifio equivalents.

This change ialso includes maven and ant targets, making
loci-legacy fully functional.

Conflicts:

	components/loci-legacy/src/loci/common/AbstractNIOHandle.java
	components/loci-legacy/src/loci/common/BZip2Handle.java
	components/loci-legacy/src/loci/common/ByteArrayHandle.java
	components/loci-legacy/src/loci/common/CBZip2InputStream.java
	components/loci-legacy/src/loci/common/CRC.java
	components/loci-legacy/src/loci/common/Constants.java
	components/loci-legacy/src/loci/common/DataTools.java
	components/loci-legacy/src/loci/common/DateTools.java
	components/loci-legacy/src/loci/common/DebugTools.java
	components/loci-legacy/src/loci/common/FileHandle.java
	components/loci-legacy/src/loci/common/GZipHandle.java
	components/loci-legacy/src/loci/common/HandleException.java
	components/loci-legacy/src/loci/common/IRandomAccess.java
	components/loci-legacy/src/loci/common/IniList.java
	components/loci-legacy/src/loci/common/IniParser.java
	components/loci-legacy/src/loci/common/IniTable.java
	components/loci-legacy/src/loci/common/IniWriter.java
	components/loci-legacy/src/loci/common/Location.java
	components/loci-legacy/src/loci/common/NIOByteBufferProvider.java
	components/loci-legacy/src/loci/common/NIOFileHandle.java
	components/loci-legacy/src/loci/common/NIOInputStream.java
	components/loci-legacy/src/loci/common/RandomAccessInputStream.java
	components/loci-legacy/src/loci/common/RandomAccessOutputStream.java
	components/loci-legacy/src/loci/common/ReflectException.java
	components/loci-legacy/src/loci/common/ReflectedUniverse.java
	components/loci-legacy/src/loci/common/Region.java
	components/loci-legacy/src/loci/common/StatusEvent.java
	components/loci-legacy/src

--- a/components/legacy/ome-notes/build.properties
+++ b/components/legacy/ome-notes/build.properties
@@ -9,8 +9,9 @@
 component.name           = ome-notes
 component.jar            = ome-notes.jar
 component.version        = 1.0.0
-component.classpath      = ${artifact.dir}/bio-formats.jar:\
+component.classpath      = ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/scifio.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar
 component.java-version   = 1.4
 component.deprecation    = true
