--- a/components/loci-plugins/build.properties
+++ b/components/loci-plugins/build.properties
@@ -10,8 +10,10 @@ component.name           = loci_plugins
 component.jar            = loci_plugins.jar
 component.version        = 4.5-DEV
 component.classpath      = ${artifact.dir}/bio-formats.jar:\
+                           ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/scifio.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/ij.jar:\
                            ${lib.dir}/junit-4.8.2.jar:\
