--- a/components/loci-plugins/pom.xml
+++ b/components/loci-plugins/pom.xml
@@ -35,6 +35,11 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>loci-legacy</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>ome-xml</artifactId>
       <version>${project.version}</version>
     </dependency>
