--- a/components/metakit/build.properties
+++ b/components/metakit/build.properties
@@ -9,7 +9,8 @@
 component.name           = metakit
 component.jar            = metakit.jar
 component.version        = 4.5-DEV
-component.classpath      = ${artifact.dir}/scifio.jar:\
+component.classpath      = ${artifact.dir}/loci-legacy.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
