--- a/components/test-suite/build.properties
+++ b/components/test-suite/build.properties
@@ -10,9 +10,11 @@ component.name           = loci-testing-framework
 component.jar            = loci-testing-framework.jar
 component.version        = 1.0.0
 component.classpath      = ${artifact.dir}/bio-formats.jar:\
+                           ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/ome-io.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/scifio.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar:\
