--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -44,6 +44,7 @@ loci-tools.dir       = loci-tools
 loci-tools.libraries = bio-formats.jar \
                        forms-1.3.0.jar \
                        jai_imageio.jar \
+                       loci-legacy.jar \
                        loci_plugins.jar \
                        mdbtools-java.jar \
                        metakit.jar \
