--- a/components/autogen/build.properties
+++ b/components/autogen/build.properties
@@ -9,9 +9,11 @@
 component.name           = bf-autogen
 component.jar            = bf-autogen.jar
 component.version        = 1.0.0
-component.classpath      = ${artifact.dir}/loci-common.jar:\
+component.classpath      = ${artifact.dir}/bio-formats.jar:\
+                           ${artifact.dir}/loci-common.jar:\
+                           ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/scifio.jar:\
-                           ${artifact.dir}/bio-formats.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/velocity-1.6.3-dep.jar
 component.java-version   = 1.5
 component.deprecation    = true
