--- a/components/loci-legacy/build.properties
+++ b/components/loci-legacy/build.properties
@@ -2,18 +2,14 @@
 # build.properties
 #
 
-# Ant properties file for LOCI I/O Image.
+# Ant properties file for Bio-Formats.
 # Download Apache Ant from http://ant.apache.org/.
 # Type "ant -p" for a list of targets.
 
-component.name           = scifio
-component.jar            = scifio.jar
+component.name           = loci-legacy
+component.jar            = loci-legacy.jar
 component.version        = 4.5-DEV
-component.classpath      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/loci-legacy.jar:\
-                           ${artifact.dir}/lwf-stubs.jar:\
-                           ${artifact.dir}/ome-xml.jar:\
-                           ${artifact.dir}/scifio-devel.jar:\
+component.classpath      = ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
@@ -32,27 +28,24 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/xalan-2.7.1.jar
 
-# Used by TestNG suite that tests the absence of classes from ome-xml.jar
-component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/lwf-stubs.jar:\
-                           ${artifact.dir}/poi-loci.jar:\
-                           ${lib.dir}/forms-1.3.0.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar:\
-                           ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
-
-# Used by TestNG suite that tests the absence of class from jai_imageio.jar
-component.cp.no-jai      = ${artifact.dir}/ome-xml.jar:\
-                           ${artifact.dir}/poi-loci.jar:\
+# Used by TestNG suite that tests the absence of classes from mdbtools-java.jar
+component.cp.no-mdb      = ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
-# Used by TestNG suite that tests the absence of class from stubs.jar
-component.cp.no-lurawave = ${artifact.dir}/ome-xml.jar:\
-                           ${artifact.dir}/poi-loci.jar:\
+# Used by TestNG suite that tests the absence of class from poi-loci.jar
+component.cp.no-poi      = ${artifact.dir}/scifio.jar:\
+                           ${lib.dir}/forms-1.3.0.jar:\
+                           ${lib.dir}/log4j-1.2.15.jar:\
+                           ${lib.dir}/slf4j-api-1.5.10.jar:\
+                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
+                           ${lib.dir}/testng-5.11-jdk15.jar
+
+# Used by TestNG suite that tests the absence of class from netcdf-4.0.jar
+component.cp.no-netcdf   = ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
