--- a/components/loci-legacy/pom.xml
+++ b/components/loci-legacy/pom.xml
@@ -12,16 +12,18 @@
     <relativePath>../..</relativePath>
   </parent>
 
-  <artifactId>ome-io</artifactId>
+  <artifactId>loci-legacy</artifactId>
 
-  <name>OME I/O</name>
-  <description>A library for OME database import, upload and download.</description>
+  <name>Loci-Legacy</name>
+  <description>Legacy layer of delegating classes to preserve
+  backwards compatibility between the legacy Bio-Formats classes and SCIFIO.</description>
+  <url>http://loci.wisc.edu/software</url>
   <inceptionYear>2005</inceptionYear>
 
   <licenses>
     <license>
-      <name>GPL 2 or later</name>
-      <url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
+      <name>Simplified BSD License</name>
+      <url>${license.server}/scifio/license.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -29,38 +31,38 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>loci-legacy</artifactId>
+      <artifactId>scifio-devel</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>ome-xml</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>scifio</artifactId>
-      <version>${project.version}</version>
-    </dependency>
+
+    <!-- NB: dependency:analyze has false warning about xml-apis:xml-apis. -->
+
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.14</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>ome</groupId>
-      <artifactId>ome-java</artifactId>
-      <version>2.6.1</version>
-    </dependency>
-    <dependency>
-      <groupId>ome</groupId>
-      <artifactId>omero-client</artifactId>
-      <version>4.3.1</version>
-    </dependency>
-    <dependency>
+      <!-- NB: We want this, despite warning from dependency:analyze. -->
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
+      <artifactId>slf4j-log4j12</artifactId>
       <version>1.5.10</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <!-- NB: We want this, despite warning from dependency:analyze. -->
+      <groupId>xalan</groupId>
+      <artifactId>serializer</artifactId>
+      <version>2.7.1</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <!-- NB: We want this, despite warning from dependency:analyze. -->
+      <groupId>xalan</groupId>
+      <artifactId>xalan</artifactId>
+      <version>2.7.1</version>
+      <scope>runtime</scope>
     </dependency>
 
     <dependency>
@@ -74,36 +76,49 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>loci.ome.io.OmeroReader</mainClass>
-              <packageName>loci.ome.io</packageName>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>test/loci/ome/utests/testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
         <configuration>
-          <licenseName>gpl_v2</licenseName>
-          <projectName>OME database I/O package for communicating with OME and OMERO servers.</projectName>
+          <licenseName>loci-legacy</licenseName>
+          <projectName>Legacy layer preserving compatibility between legacy Bio-Formats and SCIFIO.</projectName>
         </configuration>
       </plugin>
     </plugins>
   </build>
 
   <developers>
+    <developer>
+      <id>hinerm</id>
+      <name>Mark Hiner</name>
+      <email>hinerm@gmail.edu</email>
+      <url>http://developer.imagej.net/users/hinerm</url>
+      <organization>UW-Madison LOCI</organization>
+      <organizationUrl>http://loci.wisc.edu/</organizationUrl>
+      <roles>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
+      <timezone>-6</timezone>
+      <properties>
+        <picUrl>http://developer.imagej.net/files/imagej/profile-pictures/Mark.jpg?1305649677</picUrl>
+      </properties>
+    </developer>
+    <developer>
+      <id>melissa</id>
+      <name>Melissa Linkert</name>
+      <email>melissa.linkert@glencoesoftware.com</email>
+      <url>http://openmicroscopy.org/site/about/development-teams/glencoe-software</url>
+      <organization>Glencoe Software</organization>
+      <organizationUrl>http://glencoesoftware.com/</organizationUrl>
+      <roles>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
+      <timezone>-6</timezone>
+      <properties>
+        <picUrl>http://openmicroscopy.org/site/about/development-teams/glencoe-software/melissalinkert.png</picUrl>
+      </properties>
+    </developer>
     <developer>
       <id>curtis</id>
       <name>Curtis Rueden</name>
@@ -120,36 +135,7 @@
         <picUrl>http://loci.wisc.edu/files/loci/images/people/curtis-2010.jpg</picUrl>
       </properties>
     </developer>
-    <developer>
-      <id>melissa</id>
-      <name>Melissa Linkert</name>
-      <email>melissa.linkert@glencoesoftware.com</email>
-      <url>http://www.openmicroscopy.org/site/about/development-teams/glencoe-software</url>
-      <organization>Glencoe Software</organization>
-      <organizationUrl>http://glencoesoftware.com/</organizationUrl>
-      <roles>
-        <role>architect</role>
-        <role>developer</role>
-      </roles>
-      <timezone>-6</timezone>
-      <properties>
-        <picUrl>http://www.openmicroscopy.org/site/about/development-teams/glencoe-software/melissalinkert.png</picUrl>
-      </properties>
-    </developer>
   </developers>
-
-  <contributors>
-    <contributor>
-      <name>Phillip Huettl</name>
-      <url>http://loci.wisc.edu/people/phillip-huettl</url>
-      <organization>UW-Madison LOCI</organization>
-      <organizationUrl>http://loci.wisc.edu/</organizationUrl>
-      <roles>
-        <role>developer</role>
-      </roles>
-      <timezone>-6</timezone>
-    </contributor>
-  </contributors>
 
   <!-- NB: for project parent, in case of partial checkout -->
   <repositories>
@@ -162,5 +148,4 @@
       <url>http://dev.loci.wisc.edu/maven2/snapshots</url>
     </repository>
   </repositories>
-
 </project>
