--- a/components/ome-io/build.properties
+++ b/components/ome-io/build.properties
@@ -9,8 +9,10 @@
 component.name           = ome-io
 component.jar            = ome-io.jar
 component.version        = 4.5-DEV
-component.classpath      = ${artifact.dir}/ome-xml.jar:\
+component.classpath      = ${artifact.dir}/loci-legacy.jar:\
+                           ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/scifio.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/ome-java.jar:\
                            ${lib.dir}/omero_client.jar:\
