--- a/components/scifio-devel/build.properties
+++ b/components/scifio-devel/build.properties
@@ -6,15 +6,10 @@
 # Download Apache Ant from http://ant.apache.org/.
 # Type "ant -p" for a list of targets.
 
-component.name           = scifio
-component.jar            = scifio.jar
-component.version        = 4.5-DEV
-component.classpath      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/loci-legacy.jar:\
-                           ${artifact.dir}/lwf-stubs.jar:\
-                           ${artifact.dir}/ome-xml.jar:\
-                           ${artifact.dir}/scifio-devel.jar:\
-                           ${lib.dir}/forms-1.3.0.jar:\
+component.name           = scifio-devel
+component.jar            = scifio-devel.jar
+component.version        = 4.4-DEV
+component.classpath      = ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
@@ -24,7 +19,8 @@ component.deprecation    = true
 component.resources-bin  = loci/formats/bio-formats-logo.png \
                            loci/formats/meta/*.xsl \
                            loci/formats/utests/2008-09.ome
-component.resources-text = loci/formats/*.txt
+component.resources-text = loci/formats/*.txt \
+                           ome/scifio/services/services.properties
 
 component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
@@ -33,27 +29,21 @@ component.runtime-cp     = ${component.classpath}:\
                            ${lib.dir}/xalan-2.7.1.jar
 
 # Used by TestNG suite that tests the absence of classes from ome-xml.jar
-component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/lwf-stubs.jar:\
-                           ${artifact.dir}/poi-loci.jar:\
-                           ${lib.dir}/forms-1.3.0.jar:\
+component.cp.no-xml      = ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
+                           ${lib.dir}/netcdf-4.0.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from jai_imageio.jar
-component.cp.no-jai      = ${artifact.dir}/ome-xml.jar:\
-                           ${artifact.dir}/poi-loci.jar:\
-                           ${lib.dir}/forms-1.3.0.jar:\
+component.cp.no-jai      = ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from stubs.jar
-component.cp.no-lurawave = ${artifact.dir}/ome-xml.jar:\
-                           ${artifact.dir}/poi-loci.jar:\
-                           ${lib.dir}/forms-1.3.0.jar:\
+component.cp.no-lurawave = ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
