--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -37,12 +37,12 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>lwf-stubs</artifactId>
+      <artifactId>loci-legacy</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>scifio-devel</artifactId>
+      <artifactId>lwf-stubs</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
