Data tests: order first by test name, then by file
This means that we now run all of the tests for a particular file
together, instead of running e.g. all of the BufferedImage tests for
every file before all of the byte array tests for every file.  By so
doing, we drastically reduce the number of calls to setId, which means
that there is a substantial performance improvement.

See #8732.

--- a/components/test-suite/build.xml
+++ b/components/test-suite/build.xml
@@ -135,7 +135,7 @@ Type "ant -p" for a list of targets.
     description="run automated tests in group 'automated'">
     <testng sourcedir="${dest.dir}"
       annotations="Javadoc" groups="automated" testname="Automated tests"
-      listener="loci.tests.testng.DotTestListener"
+      listeners="loci.tests.testng.DotTestListener,loci.tests.testng.OrderingListener"
       suitename="LOCI software test suite"
       failureProperty="failedTest" useDefaultListeners="false">
       <classpath>
