Added services.properties to scifio.jar
Updated SCIFIO's build.properties so that ant targets will include
services.properties in scifio.jar.

--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -24,7 +24,8 @@ component.deprecation    = true
 component.resources-bin  = loci/formats/bio-formats-logo.png \
                            loci/formats/meta/*.xsl \
                            loci/formats/utests/2008-09.ome
-component.resources-text = loci/formats/*.txt
+component.resources-text = loci/formats/*.txt \
+                           ome/scifio/services/services.properties
 
 component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
