--- a/components/loci-plugins/build.properties
+++ b/components/loci-plugins/build.properties
@@ -17,16 +17,19 @@ component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/ij.jar:\
                            ${lib.dir}/junit-4.8.2.jar:\
-                           ${lib.dir}/log4j-1.2.15.jar
+                           ${lib.dir}/log4j-1.2.15.jar:\
+                           ${lib.dir}/slf4j-api-1.5.10.jar:\
+                           ${lib.dir}/testng-5.11-jdk15.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
 component.resources-bin  =
 component.resources-text = plugins.config \
                            loci/plugins/config/*.txt \
-                           loci/plugins/in/*.txt
+                           loci/plugins/in/*.txt \
 
 component.main-class     = loci.plugins.About
-component.runtime-cp     = ${component.classpath}
+component.runtime-cp     = ${component.classpath}:\
+                           ${lib.dir}/slf4j-log4j12-1.5.10.jar
 
 component.junit          = true
