Update version numbers to "4.4.1"

--- a/components/loci-plugins/build.properties
+++ b/components/loci-plugins/build.properties
@@ -8,7 +8,7 @@
 
 component.name           = loci_plugins
 component.jar            = loci_plugins.jar
-component.version        = 4.4-DEV
+component.version        = 4.4.1
 component.classpath      = ${artifact.dir}/bio-formats.jar:\
                            ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/ome-xml.jar:\
