Updated build.properties to remove loci-common.jar
As loci-common was migrated into SCIFIO, there is no more loci-common
jar. If a project that depended on loci-common did not previously have a
scifio dependency, that project now depends on scifio.jar.

--- a/components/legacy/ome-editor/build.properties
+++ b/components/legacy/ome-editor/build.properties
@@ -10,7 +10,7 @@ component.name           = ome-editor
 component.jar            = ome-editor.jar
 component.version        = 1.0.0
 component.classpath      = ${artifact.dir}/bio-formats.jar:\
-                           ${artifact.dir}/loci-common.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/ome-java-deprecated.jar
