--- a/components/legacy/ome-notes/build.properties
+++ b/components/legacy/ome-notes/build.properties
@@ -10,7 +10,7 @@ component.name           = ome-notes
 component.jar            = ome-notes.jar
 component.version        = 1.0.0
 component.classpath      = ${artifact.dir}/bio-formats.jar:\
-                           ${artifact.dir}/loci-common.jar:\
+                           ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/forms-1.3.0.jar
 component.java-version   = 1.4
 component.deprecation    = true
