--- a/components/ome-io/build.properties
+++ b/components/ome-io/build.properties
@@ -9,8 +9,7 @@
 component.name           = ome-io
 component.jar            = ome-io.jar
 component.version        = 4.5-DEV
-component.classpath      = ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/ome-xml.jar:\
+component.classpath      = ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/ome-java.jar:\
@@ -30,7 +29,7 @@ component.runtime-cp     = ${component.classpath}
 # NB: do not include ${artifact.dir}/bio-formats.jar,
 #     as its classpath includes ome-io.jar
 component.classpath-no-omeio  = ${root.dir}/components/bio-formats/build/classes:\
-                                ${artifact.dir}/loci-common.jar:\
+                                ${artifact.dir}/scifio.jar:\
                                 ${lib.dir}/log4j-1.2.15.jar:\
                                 ${lib.dir}/slf4j-api-1.5.10.jar:\
                                 ${lib.dir}/testng-5.11-jdk15.jar
