--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -10,7 +10,6 @@ component.name           = scifio
 component.jar            = scifio.jar
 component.version        = 4.5-DEV
 component.classpath      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/lwf-stubs.jar:\
                            ${artifact.dir}/ome-xml.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
@@ -33,7 +32,6 @@ component.runtime-cp     = ${component.classpath}:\
 
 # Used by TestNG suite that tests the absence of classes from ome-xml.jar
 component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
-                           ${artifact.dir}/loci-common.jar:\
                            ${artifact.dir}/lwf-stubs.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
@@ -43,8 +41,7 @@ component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from jai_imageio.jar
-component.cp.no-jai      = ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/ome-xml.jar:\
+component.cp.no-jai      = ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
@@ -53,8 +50,7 @@ component.cp.no-jai      = ${artifact.dir}/loci-common.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from stubs.jar
-component.cp.no-lurawave = ${artifact.dir}/loci-common.jar:\
-                           ${artifact.dir}/ome-xml.jar:\
+component.cp.no-lurawave = ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
