Added loci-common ant target
Ant build systems can use the jar-common target to build a
loci-common.jar.

This jar is just a direct copy of the loci-legacy jar.

--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -36,6 +36,12 @@ merged-docs.source    = ${root.dir}/components/bio-formats/build/src:\
                         ${root.dir}/components/legacy/ome-notes/build/src
 merged-docs.memory    = 512m
 
+### LOCI Common bundle ###
+loci-common.jar      = ${artifact.dir}/loci-common.jar
+loci-common.dir      = loci-common
+loci-common.libraries= loci-legacy.jar \
+                       scifio-devel.jar
+
 ### LOCI Tools bundle ###
 
 loci-tools.jar       = ${artifact.dir}/loci_tools.jar
