--- a/components/loci-common/pom.xml
+++ b/components/loci-common/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>loci</groupId>
     <artifactId>pom-scifio</artifactId>
-    <version>4.4-SNAPSHOT</version>
+    <version>4.5-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
 
@@ -32,6 +32,11 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>loci-legacy</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>scifio-devel</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
