Remove clibwrapper_jiio dependencies

--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -8,8 +8,7 @@
 
 ### Javadoc generation ###
 
-merged-docs.classpath = ${lib.dir}/clibwrapper_jiio.jar:\
-                        ${lib.dir}/forms-1.3.0.jar:\
+merged-docs.classpath = ${lib.dir}/forms-1.3.0.jar:\
                         ${lib.dir}/ij.jar:\
                         ${lib.dir}/log4j-1.2.15.jar:\
                         ${lib.dir}/netcdf-4.0.jar:\
@@ -43,7 +42,6 @@ loci-tools.jar       = ${artifact.dir}/loci_tools.jar
 loci-tools.main      = loci.formats.gui.ImageViewer
 loci-tools.dir       = loci-tools
 loci-tools.libraries = bio-formats.jar \
-                       clibwrapper_jiio.jar \
                        forms-1.3.0.jar \
                        jai_imageio.jar \
                        loci-common.jar \
