--- a/components/loci-legacy/build.properties
+++ b/components/loci-legacy/build.properties
@@ -9,7 +9,7 @@
 component.name           = loci-legacy
 component.jar            = loci-legacy.jar
 component.version        = 4.5-DEV
-component.classpath      = ${artifact.dir}/scifio.jar:\
+component.classpath      = ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
