--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -35,16 +35,20 @@ component.runtime-cp     = ${component.classpath}:\
 
 # Used by TestNG suite that tests the absence of classes from ome-xml.jar
 component.cp.no-xml      = ${artifact.dir}/jai_imageio.jar:\
+                           ${artifact.dir}/loci-legacy.jar:\
                            ${artifact.dir}/lwf-stubs.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from jai_imageio.jar
-component.cp.no-jai      = ${artifact.dir}/ome-xml.jar:\
+component.cp.no-jai      = ${artifact.dir}/loci-legacy.jar:\
+                           ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
@@ -52,8 +56,10 @@ component.cp.no-jai      = ${artifact.dir}/ome-xml.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from stubs.jar
-component.cp.no-lurawave = ${artifact.dir}/ome-xml.jar:\
+component.cp.no-lurawave = ${artifact.dir}/loci-legacy.jar:\
+                           ${artifact.dir}/ome-xml.jar:\
                            ${artifact.dir}/poi-loci.jar:\
+                           ${artifact.dir}/scifio-devel.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
