Fixed loci-legacy test targets
The loci-legacy tests now correctly mimic the original loci-common tests
- using the testng template defined.

Previously they were incorrectly mimicing the scifio style of tests.

--- a/ant/common.properties
+++ b/ant/common.properties
@@ -27,7 +27,7 @@ dest.dir     = ${build.dir}/src
 classes.dir  = ${build.dir}/classes
 
 # build subdirectory for test code
-test.dir     = ${build.dir}/test/src
+test.dir     = ${basedir}/test
 
 # build subdirectory for compiled test classes
 test-classes.dir = ${build.dir}/test/classes
