--- a/components/loci-legacy/build.properties
+++ b/components/loci-legacy/build.properties
@@ -24,17 +24,9 @@ component.resources-text = loci/formats/*.txt
 
 component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
-                           ${lib.dir}/serializer-2.7.1.jar:\
-                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/xalan-2.7.1.jar
-
-# Used by TestNG suite that tests the absence of classes from mdbtools-java.jar
-component.cp.no-mdb      = ${artifact.dir}/scifio.jar:\
-                           ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
 
 # Used by TestNG suite that tests the absence of class from poi-loci.jar
 component.cp.no-poi      = ${artifact.dir}/scifio.jar:\
@@ -51,3 +43,5 @@ component.cp.no-netcdf   = ${artifact.dir}/scifio.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                            ${lib.dir}/testng-5.11-jdk15.jar
+
+testng.xml.template      = ${test.dir}/loci/common/utests/testng-template.xml
