--- a/components/loci-legacy/build.xml
+++ b/components/loci-legacy/build.xml
@@ -12,32 +12,20 @@ Type "ant -p" for a list of targets.
   <import file="${root.dir}/ant/java.xml"/>
   <property file="build.properties"/>
 
-  <target name="test" depends="jar,compile-tests,test-no-mdb,test-no-netcdf,
-    test-no-poi"
-    description="run tests">
+  <target name="test" depends="jar, compile-tests" description="run tests">
     <!-- NOTE: Overrides default "test" target from java.xml -->
-    <copy tofile="${build.dir}/testng.xml" overwrite="true"
-      file="${tests.dir}/loci/formats/utests/testng.xml"/>
-    <testng haltonfailure="true" groups="all" testname="${component.name}">
-      <classpath>
-        <pathelement location="${test-classes.dir}"/>
-        <pathelement location="${classes.dir}"/>
-        <pathelement path="${component.classpath}"/>
-      </classpath>
-      <xmlfileset file="${build.dir}/testng.xml"/>
-      <jvmarg value="-mx${testng.memory}"/>
-    </testng>
-  </target>
-
-  <target name="test-no-mdb" depends="compile-tests"
-    description="run missing MDB tools JAR tests" if="doTests">
-    <copy tofile="${build.dir}/testng.xml" overwrite="true"
-      file="${tests.dir}/loci/formats/utests/testng-no-mdb.xml"/>
+    <copy tofile="${build.dir}/testng.xml"
+      file="${testng.xml.template}" overwrite="true">
+      <filterset>
+        <!-- Disable parallelization -->
+        <filter token="PARALLEL" value="false"/>
+      </filterset>
+    </copy>
     <testng failureProperty="failedTest">
       <classpath>
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
-        <pathelement path="${component.cp.no-mdb}"/>
+        <pathelement path="${component.runtime-cp}"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
@@ -45,57 +33,24 @@ Type "ant -p" for a list of targets.
     <fail if="failedTest"/>
   </target>
 
-  <target name="test-no-netcdf" depends="compile-tests"
-    description="run missing NetCDF JAR tests" if="doTests">
-    <copy tofile="${build.dir}/testng.xml" overwrite="true"
-      file="${tests.dir}/loci/formats/utests/testng-no-netcdf.xml"/>
+  <target name="test-parallel" depends="compile-tests"
+    description="run parallel tests" if="doTests">
+    <copy tofile="${build.dir}/testng.xml"
+      file="${testng.xml.template}" overwrite="true">
+      <filterset>
+        <!-- Enable parallelization -->
+        <filter token="PARALLEL" value="classes"/>
+      </filterset>
+    </copy>
     <testng failureProperty="failedTest">
       <classpath>
         <pathelement location="${test-classes.dir}"/>
         <pathelement location="${classes.dir}"/>
-        <pathelement path="${component.cp.no-netcdf}"/>
+        <pathelement path="${component.runtime-cp}"/>
       </classpath>
       <xmlfileset file="${build.dir}/testng.xml"/>
       <jvmarg value="-mx${testng.memory}"/>
     </testng>
     <fail if="failedTest"/>
   </target>
-
-  <target name="test-no-poi" depends="compile-tests"
-    description="run missing POI JAR tests" if="doTests">
-    <copy tofile="${build.dir}/testng.xml" overwrite="true"
-      file="${tests.dir}/loci/formats/utests/testng-no-poi.xml"/>
-    <testng failureProperty="failedTest">
-      <classpath>
-        <pathelement location="${test-classes.dir}"/>
-        <pathelement location="${classes.dir}"/>
-        <pathelement path="${component.cp.no-poi}"/>
-      </classpath>
-      <xmlfileset file="${build.dir}/testng.xml"/>
-      <jvmarg value="-mx${testng.memory}"/>
-    </testng>
-    <fail if="failedTest"/>
-  </target>
-
-  <target name="test-metadata" depends="compile-tests"
-    description="test metadata level support for a single file" if="doTests">
-    <testng sourcedir="${test.dir}" testname="Metadata tests" failureProperty="failedTest">
-      <classpath>
-        <pathelement location="${test-classes.dir}"/>
-        <pathelement location="${classes.dir}"/>
-        <pathelement path="${component.classpath}"/>
-      </classpath>
-      <classfileset file="${test-classes.dir}/loci/formats/utests/MetadataConfigurableTest.class"/>
-      <sysproperty key="testng.filename" value="${testng.filename}"/>
-      <jvmarg value="-mx${testng.memory}"/>
-    </testng>
-    <fail if="failedTest"/>
-  </target>
-
-  <target name="gen-structure-table" depends="compile"
-    description="generate the dataset structure table">
-    <java classname="loci.formats.tools.MakeDatasetStructureTable"
-      args="doc/DatasetStructureTable.wiki"/>
-  </target>
-
 </project>
