Added surefire configuration to poms
The loci-legacy and corresponding scifio-devel pom.xml files were
lacking configuration of the maven surefire plugin for testing.

This configuration has been fixed, pointing to the appropriate
testng-template.xml

--- a/components/loci-legacy/pom.xml
+++ b/components/loci-legacy/pom.xml
@@ -76,6 +76,14 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>test/loci/common/utests/testng-template.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
         <configuration>
