Removed ome.scifio.services package
All functionality in the ome.scifio.services package will remain in
loci-legacy.

There are no services implementations within the loci-legacy package
itself, so no implementation has been converted to an ome.scifio
package, so there is nothing to delegate to in terms of concrete
implementation.

Thus instead of introducing unnecessary complexity, the implementation
will remain intact.

When a loci.formats service implementation is converted to scifio, a new
methodology (using sezpoz) will be employed, so any delegation can occur
at that time.

--- a/components/loci-legacy/build.properties
+++ b/components/loci-legacy/build.properties
@@ -20,7 +20,8 @@ component.deprecation    = true
 component.resources-bin  = loci/formats/bio-formats-logo.png \
                            loci/formats/meta/*.xsl \
                            loci/formats/utests/2008-09.ome
-component.resources-text = loci/formats/*.txt
+component.resources-text = loci/formats/*.txt \
+                           loci/common/services/services.properties
 
 component.main-class     = loci.formats.gui.ImageViewer
 component.runtime-cp     = ${component.classpath}:\
