Specified surefire plugin configuration in scifio
The SCIFIO pom.xml now specifies its surefire plugin configuration,
specifically the testng.xml to use. This ensures the missing library
tests will all pass in the maven tests.

--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -102,6 +102,14 @@
   <build>
     <plugins>
       <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>test/loci/formats/utests/testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>loci.maven.plugins</groupId>
         <artifactId>cppwrap-maven-plugin</artifactId>
         <version>1.1.0</version>
