Initial version of a libjpeg-turbo service
Needs a lot of polishing yet, but it shows a lot of promise.

--- a/components/common/src/loci/common/services/services.properties
+++ b/components/common/src/loci/common/services/services.properties
@@ -59,3 +59,5 @@ loci.formats.services.LuraWaveService=loci.formats.services.LuraWaveServiceImpl
 # Metakit reader service (interface and implementation in bio-formats component;
 # depends upon metakit.jar for compilation)
 loci.formats.services.MetakitService=loci.formats.services.MetakitServiceImpl
+# libjpeg-turbo service
+loci.formats.services.JPEGTurboService=loci.formats.services.JPEGTurboServiceImpl
