--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -16,7 +16,8 @@ component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/log4j-1.2.15.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
-                           ${lib.dir}/testng-5.11-jdk15.jar
+                           ${lib.dir}/testng-5.11-jdk15.jar:\
+                           ${lib.dir}/turbojpeg.jar
 component.java-version   = 1.5
 component.deprecation    = true
 
