Rename turbojpeg.jar and update the build files

--- a/build.xml
+++ b/build.xml
@@ -282,7 +282,7 @@ TestNG
     License:   Apache
 
 libjpeg-turbo
-    JAR file:  turbojpeg.jar
+    JAR file:  turbojpeg-1.2.1.jar
     URL:       http://sourceforge.net/projects/libjpeg-turbo
     Notes:     used to read large JPEG and .ndpi images
     License:   BSD
