--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -18,7 +18,7 @@ merged-docs.classpath = ${lib.dir}/forms-1.3.0.jar:\
                         ${lib.dir}/slf4j-api-1.5.10.jar:\
                         ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
                         ${lib.dir}/testng-5.11-jdk15.jar:\
-                        ${lib.dir}/turbojpeg.jar
+                        ${lib.dir}/turbojpeg-1.2.1.jar
 merged-docs.dir       = ${root.dir}/build/docs
 merged-docs.source    = ${root.dir}/components/bio-formats/build/src:\
                         ${root.dir}/components/common/build/src:\
@@ -54,7 +54,7 @@ loci-tools.libraries = bio-formats.jar \
                        poi-loci.jar \
                        serializer-2.7.1.jar \
                        scifio.jar \
-                       turbojpeg.jar \
+                       turbojpeg-1.2.1.jar \
                        xalan-2.7.1.jar \
                        slf4j-api-1.5.10.jar \
                        slf4j-log4j12-1.5.10.jar \
