Add new files to bftools.files list
This ensures they are included in the bftools.zip distribution.

--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -98,4 +98,8 @@ bftools.files = bfconvert \
                 xmlindent.bat \
                 xmlvalid \
                 xmlvalid.bat \
-                log4j.properties
+                log4j.properties \
+                config.bat \
+                config.sh \
+                launch.bat \
+                launch.sh
